tests/lean/exitAfterParseError.lean.expected.out
exitAfterParseError.lean:5:0: error: expected ':=', 'where' or '|'
